--- a/margin.html
+++ b/margin.html
@@ -1919,42 +1919,92 @@ opinion if I so wish. <br>
                 <tr>
                     <th align="left" class="pad" width="15%">(1) </th>
                     <td width="15%">
-
+                        <div class="">
+                            <strong>XXXXXXXX</strong>
+                        </div>
                     </td>
-                    <td  width="25%"></td>
-                    <td  width="45%"> </td>
+                    <td  width="25%">
+                        <div class="">
+                            <strong>XXXXXXXX</strong>
+                        </div>
+                    </td>
+                    <td  width="45%"> 
+                        <div class="">
+                            <strong>XXXXXXXX</strong>
+                        </div>
+                    </td>
                 </tr>
                 <tr>
                     <th align="left" class="pad" > (2) </th>
                     <td>
-
+                        <div class="">
+                            <strong>XXXXXXXX</strong>
+                        </div>
                     </td>
-                    <td></td>
-                    <td></td>
+                    <td>
+                        <div class="">
+                            <strong>XXXXXXXX</strong>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="">
+                            <strong>XXXXXXXX</strong>
+                        </div>
+                    </td>
                 </tr>
                 <tr>
                     <th align="left" class="pad">(3) </th>
                     <td>
-
+                        <div class="">
+                            <strong>XXXXXXXX</strong>
+                        </div>
                     </td>
-                    <td></td>
-                    <td></td>
+                    <td>
+                        <div class="">
+                            <strong>XXXXXXXX</strong>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="">
+                            <strong>XXXXXXXX</strong>
+                        </div>
+                    </td>
                 </tr>
                 <tr>
                     <th align="left" class="pad">(4) </th>
                     <td>
-
+                        <div class="">
+                            <strong>XXXXXXXX</strong>
+                        </div>
                     </td>
-                    <td></td>
-                    <td></td>
+                    <td>
+                        <div class="">
+                            <strong>XXXXXXXX</strong>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="">
+                            <strong>XXXXXXXX</strong>
+                        </div>
+                    </td>
                 </tr>
                 <tr>
                     <th align="left" class="pad">(5) </th>
                     <td>
-
+                        <div class="">
+                            <strong>XXXXXXXX</strong>
+                        </div>
                     </td>
-                    <td></td>
-                    <td></td>
+                    <td>
+                        <div class="">
+                            <strong>XXXXXXXX</strong>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="">
+                            <strong>XXXXXXXX</strong>
+                        </div>
+                    </td>
                 </tr>
 
             </tbody>
