--- a/margin.html
+++ b/margin.html
@@ -2341,7 +2341,7 @@ disclosure statement
 </p>
 <hr height="5">
 
-<div class="mt-20 bod-top" style="padding-top: 30px; margin-top: 150px;">
+<div class="mt-20" style="padding-top: 30px; margin-top: 150px;">
     <span class="bod-top2">Client Signature (s) 客戶簽署* :</span>
     <p>Date 日期 : <span class="bod-bottom m-width d-in" >
         <!--<strong>XXXXXXX</strong> -->
