--- a/margin.html
+++ b/margin.html
@@ -2368,40 +2368,63 @@ disclosure statement
     </tr>
     <tr>
         <td colspan="2" >
-            ONLINE TRADING LIMIT :
+            ONLINE TRADING LIMIT :  
+            <!-- <div class="">
+                <strong>XXXXXXXX</strong>
+            </div> -->
+
+            <span class="bod-bottom m-width d-in" >
+               <strong>XXXXXXX</strong> 
+            </span> 
         </td>
     </tr>
     
     <tr>
         <td  width="60%">
-            ONLINE TRADING LIMIT APPROVED BY :
+            ONLINE TRADING LIMIT APPROVED BY :  <span class="bod-bottom m-width d-in" >
+                <strong>XXXXXXX</strong> 
+             </span> 
         </td>
         <td  >
-            Date :
-        </td>
-    </tr>
-    <tr>
-        <td  >
-            SIGNATURE VERIFIED BY :
-        </td>
-        <td  >
-            Date :
+            Date :   <span class="bod-bottom m-width d-in" >
+                <strong>XXXXXXX</strong> 
+             </span> 
         </td>
     </tr>
     <tr>
         <td  >
-            CHECKED BY :
+            SIGNATURE VERIFIED BY :  <span class="bod-bottom m-width d-in" >
+                <strong>XXXXXXX</strong> 
+             </span> 
         </td>
         <td  >
-            Date :
+            Date :  <span class="bod-bottom m-width d-in" >
+                <strong>XXXXXXX</strong> 
+             </span> 
         </td>
     </tr>
     <tr>
         <td  >
-            AE SIGNATURE
+            CHECKED BY :  <span class="bod-bottom m-width d-in" >
+                <strong>XXXXXXX</strong> 
+             </span> 
         </td>
         <td  >
-            Date :
+            Date :  <span class="bod-bottom m-width d-in" >
+                <strong>XXXXXXX</strong> 
+             </span> 
+        </td>
+    </tr>
+    <tr>
+        <td  >
+            AE SIGNATURE  <span class="bod-bottom m-width d-in" >
+                <strong>XXXXXXX</strong> 
+             </span> 
+        </td>
+        <td  >
+            Date :  <span class="bod-bottom m-width d-in" >
+                <strong>XXXXXXX</strong> 
+             </span> 
         </td>
     </tr>
 
