--- a/margin.html
+++ b/margin.html
@@ -2368,7 +2368,7 @@ disclosure statement
     </tr>
     <tr>
         <td colspan="2" >
-            ONLINE TRADING LIMIT :  
+            ONLINE TRADING LIMIT : &nbsp;   &nbsp;  &nbsp;
             <!-- <div class="">
                 <strong>XXXXXXXX</strong>
             </div> -->
@@ -2381,7 +2381,7 @@ disclosure statement
     
     <tr>
         <td  width="60%">
-            ONLINE TRADING LIMIT APPROVED BY :  <span class="bod-bottom m-width d-in" >
+            ONLINE TRADING LIMIT APPROVED BY : &nbsp;   &nbsp;  &nbsp; <span class="bod-bottom m-width d-in" >
                 <strong>XXXXXXX</strong> 
              </span> 
         </td>
@@ -2393,7 +2393,7 @@ disclosure statement
     </tr>
     <tr>
         <td  >
-            SIGNATURE VERIFIED BY :  <span class="bod-bottom m-width d-in" >
+            SIGNATURE VERIFIED BY : &nbsp;   &nbsp;  &nbsp; <span class="bod-bottom m-width d-in" >
                 <strong>XXXXXXX</strong> 
              </span> 
         </td>
@@ -2405,24 +2405,24 @@ disclosure statement
     </tr>
     <tr>
         <td  >
-            CHECKED BY :  <span class="bod-bottom m-width d-in" >
+            CHECKED BY : &nbsp;   &nbsp;  &nbsp; <span class="bod-bottom m-width d-in" >
                 <strong>XXXXXXX</strong> 
              </span> 
         </td>
         <td  >
-            Date :  <span class="bod-bottom m-width d-in" >
+            Date : &nbsp;   &nbsp;  &nbsp; <span class="bod-bottom m-width d-in" >
                 <strong>XXXXXXX</strong> 
              </span> 
         </td>
     </tr>
     <tr>
         <td  >
-            AE SIGNATURE  <span class="bod-bottom m-width d-in" >
+            AE SIGNATURE &nbsp;   &nbsp;  &nbsp; <span class="bod-bottom m-width d-in" >
                 <strong>XXXXXXX</strong> 
              </span> 
         </td>
         <td  >
-            Date :  <span class="bod-bottom m-width d-in" >
+            Date :&nbsp;   &nbsp;  &nbsp;  <span class="bod-bottom m-width d-in" >
                 <strong>XXXXXXX</strong> 
              </span> 
         </td>
