--- a/margin.html
+++ b/margin.html
@@ -2501,8 +2501,15 @@ disclosure statement
     </span> (Signature & confirm)
     </p>
 
-    <p>Client:</p>
-    <p>Date:
+    <p>Client:  &nbsp; &nbsp; &nbsp;
+        <span class="bod-bottom m-width d-in" >
+        <strong>XXXXXXX</strong> 
+     </span> 
+    </p>
+    <p>Date:&nbsp; &nbsp; &nbsp;
+        <span class="bod-bottom m-width d-in" >
+        <strong>XXXXXXX</strong> 
+     </span> 
     </p>
         <div class="page-footer mt-20">
     
