--- a/margin.html
+++ b/margin.html
@@ -2457,14 +2457,21 @@ disclosure statement
     </div>
 </div>
 <h2 class="text-center mt-20">CREDIT FACILITY LETTER</h2>
-<p>Date</p>
+<p>Date 
+    &nbsp; &nbsp; &nbsp;
+    <span class="bod-bottom m-width d-in" >
+    <strong>XXXXXXX</strong> 
+ </span> </p>
 <p>Dear Sir/Madam,</p>
 <p>MARGIN LOAN FACILITY</p>
 
-<p>Account No : </p>
+<p class="mt-15">Account No : &nbsp; &nbsp; &nbsp;
+    <span class="bod-bottom m-width d-in" >
+    <strong>XXXXXXX</strong> 
+ </span> </p>
 <p>Credit Limit : HK$ </p>
 <p>Normal Interest Rate : Bank Prime Rate plus % </p>
-<p>Period of Grant of Margin Loan Facility : year(s) (subject to item 4 below)</p>
+<p style="margin-bottom: 20px;">Period of Grant of Margin Loan Facility : year(s) (subject to item 4 below)</p>
 
 
 <p class="mt-15 linespace1-5">We are pleased to confirm that we are prepared to grant to you a Credit Facility on the terms and conditions as setup
@@ -2488,11 +2495,11 @@ disclosure statement
 <p class="mt-15 linespace1-5">Kindly signify your agreement to the terms of this Credit Facility Letter by signing and returning to us the duplicate
     copy.</p>
 
-    <p class="linespace1-5">
+    <p class="linespace1-5 mt-15">
         Grand Partners Securities Limited<br>
         <em>This is a computer print-out, no signature is required</em>
     </p>
-    <p> On Duplicate</p>
+    <p class="mt-15"> On Duplicate</p>
     <p class="linespace1-5">I/We have read, understood and accept the terms of this Credit Facility Letter and request Grand Partners Securities
         Limited to provide the Credit Facility to me/us on the terms hereof.</p>
     <p class="" style="margin-top: 20px;">
