--- a/margin.html
+++ b/margin.html
@@ -2457,7 +2457,7 @@ disclosure statement
     </div>
 </div>
 <h2 class="text-center mt-20">CREDIT FACILITY LETTER</h2>
-<p>Date 
+<p class="mt-20">Date 
     &nbsp; &nbsp; &nbsp;
     <span class="bod-bottom m-width d-in" >
     <strong>XXXXXXX</strong> 
@@ -2465,7 +2465,7 @@ disclosure statement
 <p>Dear Sir/Madam,</p>
 <p>MARGIN LOAN FACILITY</p>
 
-<p class="mt-15">Account No : &nbsp; &nbsp; &nbsp;
+<p class="mt-20">Account No : &nbsp; &nbsp; &nbsp;
     <span class="bod-bottom m-width d-in" >
     <strong>XXXXXXX</strong> 
  </span> </p>
@@ -2474,7 +2474,7 @@ disclosure statement
 <p style="margin-bottom: 20px;">Period of Grant of Margin Loan Facility : year(s) (subject to item 4 below)</p>
 
 
-<p class="mt-15 linespace1-5">We are pleased to confirm that we are prepared to grant to you a Credit Facility on the terms and conditions as setup
+<p class="mt-20 linespace1-5">We are pleased to confirm that we are prepared to grant to you a Credit Facility on the terms and conditions as setup
     of this Credit Facility Letter.</p>
 
 <ol type="1" class="linespace1-5">
@@ -2492,17 +2492,17 @@ disclosure statement
         and agreements etc previously signed are valid and legally binding.</li>
 </ol>
 
-<p class="mt-15 linespace1-5">Kindly signify your agreement to the terms of this Credit Facility Letter by signing and returning to us the duplicate
+<p class="mt-20 linespace1-5">Kindly signify your agreement to the terms of this Credit Facility Letter by signing and returning to us the duplicate
     copy.</p>
 
-    <p class="linespace1-5 mt-15">
+    <p class="linespace1-5 mt-20">
         Grand Partners Securities Limited<br>
         <em>This is a computer print-out, no signature is required</em>
     </p>
-    <p class="mt-15"> On Duplicate</p>
+    <p class="mt-20"> On Duplicate</p>
     <p class="linespace1-5">I/We have read, understood and accept the terms of this Credit Facility Letter and request Grand Partners Securities
         Limited to provide the Credit Facility to me/us on the terms hereof.</p>
-    <p class="" style="margin-top: 20px;">
+    <p class="" style="margin-top: 30px;">
         <span class="bod-bottom">
         <!--<strong>XXXXXXX</strong>-->
     </span> (Signature & confirm)
