--- a/margin.html
+++ b/margin.html
@@ -2463,7 +2463,7 @@ disclosure statement
     <strong>XXXXXXX</strong> 
  </span> </p>
 <p>Dear Sir/Madam,</p>
-<p>MARGIN LOAN FACILITY</p>
+<p class="mt-20">MARGIN LOAN FACILITY</p>
 
 <p class="mt-20">Account No : &nbsp; &nbsp; &nbsp;
     <span class="bod-bottom m-width d-in" >
@@ -2474,7 +2474,7 @@ disclosure statement
 <p style="margin-bottom: 20px;">Period of Grant of Margin Loan Facility : year(s) (subject to item 4 below)</p>
 
 
-<p class="mt-20 linespace1-5">We are pleased to confirm that we are prepared to grant to you a Credit Facility on the terms and conditions as setup
+<p class="mt-50 linespace1-5">We are pleased to confirm that we are prepared to grant to you a Credit Facility on the terms and conditions as setup
     of this Credit Facility Letter.</p>
 
 <ol type="1" class="linespace1-5">
@@ -2495,17 +2495,17 @@ disclosure statement
 <p class="mt-20 linespace1-5">Kindly signify your agreement to the terms of this Credit Facility Letter by signing and returning to us the duplicate
     copy.</p>
 
-    <p class="linespace1-5 mt-20">
+    <p class="linespace1-5 mt-50">
         Grand Partners Securities Limited<br>
         <em>This is a computer print-out, no signature is required</em>
     </p>
-    <p class="mt-20"> On Duplicate</p>
+    <p class="mt-50"> On Duplicate</p>
     <p class="linespace1-5">I/We have read, understood and accept the terms of this Credit Facility Letter and request Grand Partners Securities
         Limited to provide the Credit Facility to me/us on the terms hereof.</p>
-    <p class="" style="margin-top: 30px;">
-        <span class="bod-bottom">
+    <p class="" style="margin-top: 50px;">
+        (Signature & confirm) &nbsp;  &nbsp; <span class="bod-bottom">
         <!--<strong>XXXXXXX</strong>-->
-    </span> (Signature & confirm)
+    </span> 
     </p>
 
     <p>Client:  &nbsp; &nbsp; &nbsp;
