--- a/index.html
+++ b/index.html
@@ -1244,7 +1244,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
             <br>再者，本人確認載或附於客戶協議之風險披露聲明已按本人選擇之語言(英文或中文) 提供予本人，及本人已閱讀，瞭解和接受其 / 其等 (若適用) 性質和內容。本人明白它們不是，而且不能被當作一份完全或徹底列舉所有潛在風險的清單。此外，本人已被給予機會提出問題及徵求獨立的意見 (若本人有此意願)。
             
         </div>
-        <div class="linespace1-5 pad">
+        <div class="linespace1-5 pad mt-50">
             <p>Executed as a deed on 簽訂作契約於: <span class="bod-bottom" style="width: 50%; display: inline-block;">
                 <!--<strong>XXXXXXXX</strong>-->
             </span>			(insert date 請填上日期)</p>
@@ -1263,20 +1263,23 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
 
                 <tr>
                     <td width="32%" >
-                        <div class="bod-bottom">
+                        <div class="bod-bottom mt-20">
                             <!--<strong>XXXXXXXX</strong>-->
                         </div>
                     </td>
-                    <td width="32%"><div class="bod-bottom">
+                    <td width="32%"><div class="bod-bottom mt-20">
                         <!--<strong>XXXXXXXX</strong>-->
                     </div></td>
                     <td width="32%">
-                        <div class="bod-bottom">
+                        <div class="bod-bottom mt-20">
                             <!--<strong>XXXXXXXX</strong>-->
                         </div>
-                        CE No. 持牌代表中央編號: <span class="bod-bottom">
-                        <!--<strong>XXXXXXXX</strong>-->
-                    </span>
+                        <p>
+                            CE No. 持牌代表中央編號: <span class="bod-bottom">
+                                <!--<strong>XXXXXXXX</strong>-->
+                            </span>
+                        </p>
+                        
                         </td>
                 </tr>
 
