--- a/index.html
+++ b/index.html
@@ -1274,8 +1274,9 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                         <div class="bod-bottom mt-20">
                             <!--<strong>XXXXXXXX</strong>-->
                         </div>
-                        <p>
-                            CE No. 持牌代表中央編號: <span class="bod-bottom">
+                        <p class="mt-10">
+                            CE No. 持牌代表中央編號:
+                             <span class="bod-bottom m-width">
                                 <!--<strong>XXXXXXXX</strong>-->
                             </span>
                         </p>
