--- a/index.html
+++ b/index.html
@@ -1394,7 +1394,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                         For Comm. Rate:
                     </td>
                     <td width="25%">
-                        <div class="bod-bottom">
+                        <div class="bod-bottom" style="width: 95%;">
                           <!-- <strong>XXXXXXXX</strong> -->
                         </div>
                     </td>
@@ -1413,7 +1413,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                         AE Name:
                     </td>
                     <td >
-                        <div class="bod-bottom">
+                        <div class="bod-bottom" style="width: 95%;">
                           <!-- <strong>XXXXXXXX</strong> -->
                         </div>
                     </td>
@@ -1433,7 +1433,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                         Account opening approved by:
                     </td>
                     <td>
-                        <div class="bod-bottom">
+                        <div class="bod-bottom" style="width: 95%;">
                           <!-- <strong>XXXXXXXX</strong> -->
                         </div>
                     </td>
@@ -1452,7 +1452,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                         Name (please print):
                     </td>
                     <td>
-                        <div class="bod-bottom">
+                        <div class="bod-bottom" style="width: 95%;">
                           <!-- <strong>XXXXXXXX</strong> -->
                         </div>
                     </td>
@@ -1471,7 +1471,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                         Date:
                     </td>
                     <td>
-                        <div class="bod-bottom">
+                        <div class="bod-bottom" style="width: 95%;">
                           <!-- <strong>XXXXXXXX</strong> -->
                         </div>
                     </td>
