--- a/index.html
+++ b/index.html
@@ -2913,40 +2913,59 @@ disclosure statement
        </tr>
        <tr>
            <td colspan="2" >
-               ONLINE TRADING LIMIT :
+               ONLINE TRADING LIMIT : 
+               <span class="bod-bottom m-width d-in" >
+                <strong>XXXXXXX</strong> 
+                </span> 
            </td>
        </tr>
        
        <tr>
            <td  width="60%">
-               ONLINE TRADING LIMIT APPROVED BY :
+               ONLINE TRADING LIMIT APPROVED BY :  <span class="bod-bottom m-width d-in" >
+                <strong>XXXXXXX</strong> 
+                </span> 
            </td>
            <td  >
-               Date :
-           </td>
-       </tr>
-       <tr>
-           <td  >
-               SIGNATURE VERIFIED BY :
-           </td>
-           <td  >
-               Date :
+               Date :  <span class="bod-bottom m-width d-in" >
+                <strong>XXXXXXX</strong> 
+                </span> 
            </td>
        </tr>
        <tr>
            <td  >
-               CHECKED BY :
+               SIGNATURE VERIFIED BY :  <span class="bod-bottom m-width d-in" >
+                <strong>XXXXXXX</strong> 
+                </span> 
            </td>
            <td  >
-               Date :
+               Date :  <span class="bod-bottom m-width d-in" >
+                <strong>XXXXXXX</strong> 
+                </span> 
            </td>
        </tr>
        <tr>
            <td  >
-               AE SIGNATURE
+               CHECKED BY :  <span class="bod-bottom m-width d-in" >
+                <strong>XXXXXXX</strong> 
+                </span> 
            </td>
            <td  >
-               Date :
+               Date :  <span class="bod-bottom m-width d-in" >
+                <strong>XXXXXXX</strong> 
+                </span> 
+           </td>
+       </tr>
+       <tr>
+           <td  >
+               AE SIGNATURE  <span class="bod-bottom m-width d-in" >
+                <strong>XXXXXXX</strong> 
+                </span> 
+           </td>
+           <td  >
+               Date :  <span class="bod-bottom m-width d-in" >
+                <strong>XXXXXXX</strong> 
+                </span> 
            </td>
        </tr>
 
