--- a/index.html
+++ b/index.html
@@ -2914,7 +2914,7 @@ disclosure statement
        <tr>
            <td colspan="2" >
                ONLINE TRADING LIMIT : 
-               <span class="bod-bottom m-width d-in" >
+               <span class=" m-width d-in" >
                 <strong>XXXXXXX</strong> 
                 </span> 
            </td>
@@ -2922,48 +2922,48 @@ disclosure statement
        
        <tr>
            <td  width="60%">
-               ONLINE TRADING LIMIT APPROVED BY :  <span class="bod-bottom m-width d-in" >
+               ONLINE TRADING LIMIT APPROVED BY :  <span class=" m-width d-in" >
                 <strong>XXXXXXX</strong> 
                 </span> 
            </td>
            <td  >
-               Date :  <span class="bod-bottom m-width d-in" >
-                <strong>XXXXXXX</strong> 
-                </span> 
-           </td>
-       </tr>
-       <tr>
-           <td  >
-               SIGNATURE VERIFIED BY :  <span class="bod-bottom m-width d-in" >
-                <strong>XXXXXXX</strong> 
-                </span> 
-           </td>
-           <td  >
-               Date :  <span class="bod-bottom m-width d-in" >
+               Date :  <span class=" m-width d-in" >
                 <strong>XXXXXXX</strong> 
                 </span> 
            </td>
        </tr>
        <tr>
            <td  >
-               CHECKED BY :  <span class="bod-bottom m-width d-in" >
+               SIGNATURE VERIFIED BY :  <span class=" m-width d-in" >
                 <strong>XXXXXXX</strong> 
                 </span> 
            </td>
            <td  >
-               Date :  <span class="bod-bottom m-width d-in" >
+               Date :  <span class=" m-width d-in" >
                 <strong>XXXXXXX</strong> 
                 </span> 
            </td>
        </tr>
        <tr>
            <td  >
-               AE SIGNATURE  <span class="bod-bottom m-width d-in" >
+               CHECKED BY :  <span class=" m-width d-in" >
                 <strong>XXXXXXX</strong> 
                 </span> 
            </td>
            <td  >
-               Date :  <span class="bod-bottom m-width d-in" >
+               Date :  <span class="m-width d-in" >
+                <strong>XXXXXXX</strong> 
+                </span> 
+           </td>
+       </tr>
+       <tr>
+           <td  >
+               AE SIGNATURE  <span class=" m-width d-in" >
+                <strong>XXXXXXX</strong> 
+                </span> 
+           </td>
+           <td  >
+               Date :  <span class=" m-width d-in" >
                 <strong>XXXXXXX</strong> 
                 </span> 
            </td>
