git commit message example

--- a/margin.html
+++ b/margin.html
@@ -3382,6 +3382,7 @@ Reference Letter). <br>
     
             <!--page13-->
            </div>
+           <!--pdf as page 12 beginning-->
 
 
     </div>
