added 2 new pages

--- a/margin.html
+++ b/margin.html
@@ -3382,8 +3382,150 @@ Reference Letter). <br>
     
             <!--page13-->
            </div>
-           <!--pdf as page 12 beginning-->
+
+           <div class="container">
+            <div class="mini-container">
+                <img id="newImg" src="images/logo.jpg" alt="logo">
+                <h3>申請[中華通北向交易服務]</h3>
+            </div>
+            &nbsp;
+            <p>確認和同意：</p>
+            <p>
+                本人/吾等確認本人/吾等已閱讀並了解利盟證券有限公司（「利盟證券」）的個人資料收 集聲明的
+內容。通過勾選下面的方框，本人/吾等表示本人/吾等同意利盟證券根據個人信息收集聲明 中的條
+款和目的使用本人/吾等之個人資料。
+            </p>
+            <input type="checkbox" id="check" class="_not_checked" />
+            <label for="check">本人/吾等同意利盟證券將本人/吾等之個人資料用於個人資料收集聲明所載的目的。</label>
+            <br>
+            &nbsp;
+            <p class="col">
+                <label for="type1">客戶簽名 ：</label>
+                <input type="text" name="" id="type1"  class="btmu" size="40" autocomplete>
+                <br>
+                <label for="type2">客戶名稱 ：</label>
+                <input type="text" name="" id="type"  class="btmu" size="40" autocomplete>
+                <br>
+                <label for="type2">戶口號碼 ：</label>
+                <input type="text" name="" id="type"  class="btmu" size="40" autocomplete>
+                <br>
+                <label for="type2">日期    ：</label>
+                <input type="text" name="" id="type"  class="btmu" size="40" autocomplete>      
+            </p>
+            <p style="padding-top:25px;">
+                備注： 個人信息收集聲明關於中華通北向交易
+            </p>
+            <p style="padding-top:25px;">
+                處理個人資料作為[中華通北向交易]的一部分
+            </p>
+            <p style="padding-top:25px;">
+                您/汝等確認並同意在向您/汝等提供利盟證券的 <strong>[</strong> 中華通北向交易服務<strong>]</strong>時，利盟證券將被要求：
+                <br>
+                <strong>（i）</strong>用<strong>[</strong>證券經紀對客戶指定的券商客戶編號（<strong>“BCAN”</strong>），即您個人獨一無二的或分配給汝等之聯合賬戶（如適用）]<strong></strong>標記的每份訂單提交給中國結算;和
+                <br>
+                <strong>（ii）</strong>向交易所提供您/汝等之 <strong>“BCAN”</strong> 以及交易所根據交易所規則可能不時要求與您有關的身份信息
+                <br>（“客戶身份資料”或<strong>“CID”</strong>）。
+            </p>
+            <p style="padding-top:25px ;">
+                <pre>在不限制關於處理與您的帳戶及利盟證券對您的服務收集到個人數據所提供的通知及您的相關同意
+下您確認並同意利盟證券可能會收集、儲存、使用、披露，並根據需要轉交與您有關的個人資料，
+作為利盟證券[中華通北向交易服務]的一部分，包括以下內容：
+                </pre>
+            </p>
+            &nbsp;
+            <p>
+                <strong>（a）</strong>向交易所及相關聯交所附屬公司不時披露並轉交您的<strong> BCAN</strong> 和 <strong>CID</strong>，包括在輸入中華通訂單
+                時註明您的 <strong>BCAN</strong>，並實時將其進一步發送至相關中華通市場營運者;
+            </p>
+            <p style="padding-top: 25px;">
+                <strong>（b）</strong>允許各交易所及相關聯交所附屬公司：<strong>（i）</strong>收集、使用及儲存您的 <strong>CID</strong>， 以及由相關中 華
+                通結算所提供的任何經整合、驗證及配對的 <strong>BCANs</strong> 及 <strong>CID</strong> 資料（其中任何一家或通過香港交易 
+                所進行存儲）以進行市場監督、監察及執行交易所規則;<strong>（ii）</strong> 不時為下文<strong>（c）</strong>及<strong>（d）</strong>段所載之目
+                的，將有關資料轉交給相關中華通市場營運者（直接或透過相關中華通結算所）；及<strong>（iii）</strong>向香港
+                相 關監管機構和執法機構披露有關資料，以協助履行其在香港金融市場的法定職能;
+            </p>
+            <p style="padding-top: 25px;">
+                <strong>( c )</strong>允許相關中華通結算所：<strong>（i）</strong>收集、使用和儲存您的<strong>BCAN</strong>  和<strong>CID</strong> ，以協助 BCAN 和 <strong>CID</strong>
+                的 整合和驗證，將 <strong>BCANs</strong> 和 <strong>CID</strong> 與其投資者識別數據庫作出配對，並提供此等合併、驗證及已
+                配對 <strong>BCANs</strong> 及 <strong>CID</strong> 資料予相關中華通市場營運者、聯交所及相關聯交所附屬公司； <strong>（ii）</strong>使用您
+                的 <strong>BCAN</strong> 和 <strong>CID</strong> 以履行其證券賬戶管理的監管職能；及<strong>（iii）</strong>向有管轄權的內地監管機構及執法機
+                構 披露有關資料，以協助履行其對內地金融市場的監管、監察及執法職能；和
+            </p>
+            <p style="padding-top: 25px;">
+                <strong>（d）</strong>允許相關中華通市場營運者：<strong>（i）</strong>通過使用中華通服務及執行中華通市場營運者的規則，收
+集、使用及儲存您的 <strong>BCAN</strong> 及 <strong>CID</strong>，以便監察及監管相關中華通市場上的證券交易;及<strong>（ii）</strong>向內
+地 監管機構及執法機構披露有關資料，以協助履行其對內地金融市場的監管、監察及執法職能。
+            </p>
+            <p style="padding-top: 25px;">
+                通過對利盟證券發出就中華通證券有關的任何交易指示，您確認並同意利盟證券可能會使用您的個
+人資料，以遵守聯交所對<strong>[</strong>中華通北向交易<strong>]</strong>不時有效的要求及其規則。您也確認，儘管您隨後表示撤
+回此同意，但您的個人數據仍有機會繼續被儲存、使用、披露、轉交和以其他方式處理以達到上述
+目的，無論是在此同意的撤銷之前還是之後。
+            </p>
+            <p style="padding-top: 25px;">未能提供個人資料或同意的後果</p>
+            <p style="padding-top: 25px;">
+                若您未能向利盟證券提供您的個人資料或上述同意，利盟證券將不會或不能，根據具體情況， 執行
+                您的交易指令或向您提供利盟證券的[中華通北向交易服務]。                
+            </p>
+            <hr>
+            <div style="float:right;width:5vw" class="light pad">
+                14
+            </div>
+           </div>
+           <!--page 14-->
+           <div style="padding-top: 25px;" class="container">
+            <div class="mini-container">
+                <h2>常設授權 STANDING AUTHORITY</h2>
+            </div>
+            <p class="mt-20">
+                <input type="checkbox" name="" id="not_required">
+                <label for="not_required">不需要 Not required</label>
+            </p>
+            <p class="mt-20">
+                <input type="checkbox"  name="" id="required">
+                <label for="required">需要Required</label>
+            </p>
+            <p>
+                <h3>
+                    懇請貴公司在接獲本人/吾等/本公司之電話提款指示後:-<br>
+                    Upon receipt of my/our telephone instruction for fund withdrawal:
+                </h3>
+                <ol style="list-style: none;">
+                    <li class="mt-20">
+                        <input type="checkbox" name="" id="issue_cheque">
+                        <label for="issue_cheque">發出以本人/吾等/本公司為抬頭人之支票 <br> Issue cheque in my /our/our company’s favor.</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" name="" id="credit">
+                        <label for="credit">將款項存入本人/吾等/本公司在上列銀行之港幣儲蓄/往來帳戶.- <br>
+                            Credit to my/our HK$ saving /current account with the above bank.
+                            </label>
+                    </li>
+                </ol>
+            </p>
+            <p>本人/吾等/本公司願意對本人/吾等/本公司所發出指示的絕對準確性負上全部責任，特別是有關本人/吾等/本公司之受
+                 款銀行帳戶名稱及號碼之詳細資料。對於因輸入的資料不準確而導致款項錯誤存入或轉出，本人/吾等/本公司將不會為收回款項之延誤或追討賠償而向 
+                 貴公司作出要求、索償或訴訟，貴公司毋須為此負上任何責任。本人/本公司確認及同意本常設授權自即日生效直至另行通知為上。</p>
+            <p>
+                I/We accept full responsibility for the absolute correctness of my/our instruction, in particular, the absolute correctness 
+                of my/our account name and number, particulars of the payee bank as the case may be. I/We will not demand, claim or prosecute 
+                against you for recovery of damage and generally hold you harmless in the event that the funds were wrongly deposited or paid out on delay 
+                due to mistakes in the entered particulars.
+                 I/We acknowledge and agree that this Standing Authority (Issue of Cheque) is effective from the date hereof until further notice.
+            </p>
+            <p>
+                <pre>
 
 
+
+
+
+                    
+                </pre>
+                <h1><u>常設授權 STANDING AUTHORITY</u></h1>
+                <p><h1>不需要 Not required  需要Required</h1></p>
+            </p>
+           </div>
+           <!--page15-->
     </div>
 </body>
