--- a/cash.html
+++ b/cash.html
@@ -3073,6 +3073,7 @@ disclosure statement
             <div style="float:right;width:5vw" class="light pad">
                 12
             </div>
+            <div class="clear break-after"></div>
            </div>
            <!--page12-->
            <div style="padding-top: 25px;" class="container">
@@ -3127,6 +3128,7 @@ disclosure statement
                 <h1><u>常設授權 STANDING AUTHORITY</u></h1>
                 <p><h1>不需要 Not required  需要Required</h1></p>
             </p>
+            <div class="clear break-after"></div>
            </div>
            <!--page13-->
     </div>
