--- a/margin.html
+++ b/margin.html
@@ -3383,7 +3383,7 @@ Reference Letter). <br>
             <!--page13-->
            </div>
 
-           <div class="container">
+           <div style="page-break-after: always;" class="container">
             <div class="mini-container">
                 <img id="newImg" src="images/logo.jpg" alt="logo">
                 <h3>申請[中華通北向交易服務]</h3>
@@ -3472,9 +3472,10 @@ Reference Letter). <br>
                 14
             </div>
             <div class="clear break-after"></div>
+            <div class="clear break-after"></div>
         </div>
            <!--page 14-->
-           <div style="padding-top: 25px;" class="container">
+           <div style="page-break-after: always;" class="container">
             <div class="mini-container">
                 <h2>常設授權 STANDING AUTHORITY</h2>
             </div>
@@ -3526,7 +3527,8 @@ Reference Letter). <br>
                 <h1><u>常設授權 STANDING AUTHORITY</u></h1>
                 <p><h1>不需要 Not required  需要Required</h1></p>
             </p>
-           </div>
+            <div class="clear break-after"></div>
+         </div>
            <!--page15-->
     </div>
 </body>
