--- a/margin.html
+++ b/margin.html
@@ -3522,7 +3522,9 @@ Reference Letter). <br>
                 <h1><u>常設授權 STANDING AUTHORITY</u></h1>
                 <p><h1>不需要 Not required  需要Required</h1></p>
             </p>
-            
+            <div style="float:left;width:5vw" class="light pad">
+                
+            </div>
          </div>
            <!--page15-->
     </div>
