--- a/margin.html
+++ b/margin.html
@@ -3463,7 +3463,7 @@ Reference Letter). <br>
                 您的交易指令或向您提供利盟證券的[中華通北向交易服務]。                
             </p>
             <hr>
-            <div style="float:right;width:5vw" class="light pad">
+            <div style="width:12vw;float:right;" class="light-p pad">
                 14
             </div>
             <div class="clear break-after"></div>
@@ -3522,10 +3522,10 @@ Reference Letter). <br>
                 <h1><u>常設授權 STANDING AUTHORITY</u></h1>
                 <p><h1>不需要 Not required  需要Required</h1></p>
             </p>
-            <div style="float:left;width:5vw" class="light pad">
-                
-            </div>
          </div>
+         <div style="width:12vw;float:right;" class="light-p pad">
+            15
+        </div>
            <!--page15-->
     </div>
 </body>
