--- a/cash.html
+++ b/cash.html
@@ -2985,7 +2985,7 @@ disclosure statement
         <!--page11-->
         </div>
            <!--pdf as page 12 beginning-->
-           <div style="page-break-after: always;" class="container pb85">
+           <div class="container pb85">
             <div class="mini-container">
                 <img id="newImg" src="images/logo.jpg" alt="logo">
                 <h3>申請[中華通北向交易服務]</h3>
