--- a/margin.html
+++ b/margin.html
@@ -3390,23 +3390,25 @@ Reference Letter). <br>
 內容。通過勾選下面的方框，本人/吾等表示本人/吾等同意利盟證券根據個人信息收集聲明 中的條
 款和目的使用本人/吾等之個人資料。
             </p>
-            <input type="checkbox" id="check" class="_not_checked" />
-            <label for="check">本人/吾等同意利盟證券將本人/吾等之個人資料用於個人資料收集聲明所載的目的。</label>
-            <br>
+            <div style="padding-top:3vw;" class="mini">
+                <input type="checkbox" id="check" class="_not_checked" />
+                <label for="check">本人/吾等同意利盟證券將本人/吾等之個人資料用於個人資料收集聲明所載的目的。</label>
+                <br>
+            </div>
             &nbsp;
-            <p class="col">
+            <div class="col">
                 <label for="type1">客戶簽名 ：</label>
                 <input type="text" name="" id="type1"  class="btmu" size="40" autocomplete>
                 <br>
                 <label for="type2">客戶名稱 ：</label>
-                <input type="text" name="" id="type"  class="btmu" size="40" autocomplete>
+                <input type="text" name="" id="type2"  class="btmu" size="40" autocomplete>
                 <br>
-                <label for="type2">戶口號碼 ：</label>
-                <input type="text" name="" id="type"  class="btmu" size="40" autocomplete>
+                <label for="type3">戶口號碼 ：</label>
+                <input type="text" name="" id="type3"  class="btmu" size="40" autocomplete>
                 <br>
-                <label for="type2">日期    ：</label>
-                <input type="text" name="" id="type"  class="btmu" size="40" autocomplete>      
-            </p>
+                <label for="type4">日期 <span style="margin-left: 2vw;">:</span></label>
+                <input style="margin-left: 10px;" type="text" name="" id="type4"  class="btmu" size="40" autocomplete>      
+            </div>
             <p style="padding-top:25px;">
                 備注： 個人信息收集聲明關於中華通北向交易
             </p>
