--- a/cash.html
+++ b/cash.html
@@ -3013,8 +3013,8 @@ disclosure statement
                 <label for="type3">戶口號碼 ：</label>
                 <input type="text" name="" id="type3"  class="btmu" size="40" autocomplete>
                 <br>
-                <label for="type4">日期 ：</label>
-                <input style="margin-left: 28px;" type="text" name="" id="type4"  class="btmu" size="40" autocomplete>      
+                <label for="type4">日期 <span style="margin-left: 2vw;">:</span></label>
+                <input style="margin-left: 10px;" type="text" name="" id="type4"  class="btmu" size="40" autocomplete>      
             </div>
             <p style="padding-top:25px;">
                 備注： 個人信息收集聲明關於中華通北向交易
