--- a/cash.html
+++ b/cash.html
@@ -3078,7 +3078,7 @@ disclosure statement
             <div class="clear break-after"></div>
            </div>
            <!--page12-->
-           <div  class="container pb85">
+           <div style="font-size: 1.5vw;" class="container pb85">
             <div class="mini-container">
                 <h2>常設授權 STANDING AUTHORITY</h2>
             </div>
