--- a/margin.html
+++ b/margin.html
@@ -15,7 +15,7 @@
                     Tel : (852) 3701 3200 Fax : (852) 3102 1855</p>
             </div>
         </div>
-        <div class="container" style="min-height:1714px">
+        <div class="container">
             <p>
                 
                 Participant of The Stock Exchanges of Hong Kong Limited <br>
