--- a/cash.html
+++ b/cash.html
@@ -2919,7 +2919,7 @@ disclosure statement
            <td colspan="2" >
                ONLINE TRADING LIMIT : 
                <span class=" m-width d-in" >
-                <strong>XXXXXXX</strong> 
+                <!-- <strong>XXXXXXX</strong>  -->
                 </span> 
            </td>
        </tr>
@@ -2927,48 +2927,48 @@ disclosure statement
        <tr>
            <td  width="60%">
                ONLINE TRADING LIMIT APPROVED BY :  <span class=" m-width d-in" >
-                <strong>XXXXXXX</strong> 
+                <!-- <strong>XXXXXXX</strong>  -->
                 </span> 
            </td>
            <td  >
                Date :  <span class=" m-width d-in" >
-                <strong>XXXXXXX</strong> 
+                <!-- <strong>XXXXXXX</strong>  -->
                 </span> 
            </td>
        </tr>
        <tr>
            <td  >
                SIGNATURE VERIFIED BY :  <span class=" m-width d-in" >
-                <strong>XXXXXXX</strong> 
+                <!-- <strong>XXXXXXX</strong>  -->
                 </span> 
            </td>
            <td  >
                Date :  <span class=" m-width d-in" >
-                <strong>XXXXXXX</strong> 
+                <!-- <strong>XXXXXXX</strong>  -->
                 </span> 
            </td>
        </tr>
        <tr>
            <td  >
                CHECKED BY :  <span class=" m-width d-in" >
-                <strong>XXXXXXX</strong> 
+                <!-- <strong>XXXXXXX</strong>  -->
                 </span> 
            </td>
            <td  >
                Date :  <span class="m-width d-in" >
-                <strong>XXXXXXX</strong> 
+                <!-- <strong>XXXXXXX</strong>  -->
                 </span> 
            </td>
        </tr>
        <tr>
            <td  >
                AE SIGNATURE  <span class=" m-width d-in" >
-                <strong>XXXXXXX</strong> 
+                <!-- <strong>XXXXXXX</strong>  -->
                 </span> 
            </td>
            <td  >
                Date :  <span class=" m-width d-in" >
-                <strong>XXXXXXX</strong> 
+                <!-- <strong>XXXXXXX</strong>  -->
                 </span> 
            </td>
        </tr>
